# qa_pdf

./: .env  .env.example  .gitignore  .pytest.ini  README.md  conftest.py  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: classifier.py  config.py  filters.py  ingest.py  logger.py  multi_run.py  qa.py  settings.py
architecture/: directory_structure.md
data/: pdf_meta.json  questions.json
docs/: 01_20250527_Ingestとqa構築.md  02_20250528_qa_検索観察モード_スコア付きログ基盤.md  03_20250529_chunk.md  04_20250530_test.md  05_20250531_multiPDF.md  06_20250531_filteringBySourceMetadata.md  07_20250531_addTestCase.md  08_20250601_CI構成.md  09_20250602_phase6_task1.md  10_20250603_phase6_task2-3.md  10_20250603_phase6_task2.md  command.md  directory_structure.md  task_list.md
index/faiss_index/: index.faiss  index.pkl
scripts/: README.md  build_vectorstore.py  manual_run.py  multi_run.py
tests/: log_utils.py  manual_embedding_check.py  manual_qa_run_log.py  manual_vector_check.py  run_qa_test.py  test_embedding.py  test_qa_search.py
